--- a/css/task4.css
+++ b/css/task4.css
@@ -20,3 +20,12 @@ body {
 .logo {
   font-size: 18px;
 }
+
+.item-menu li {
+  list-style: none;
+}
+
+.item-menu {
+  display: flex;
+  justify-content: flex-end;
+}
