--- a/css/task4.css
+++ b/css/task4.css
@@ -3,37 +3,45 @@ body {
   color: #212121;
   line-height: 1.5;
   font-size: 16px;
-  background-color: #635add;
+  /* background-color: #635add; */
 }
 
-.header a {
-  color: inherit;
-  font-family: inherit;
-  text-decoration: none;
-}
-
-.header a:hover,
-.header a:focus {
-  color: #2196f3;
+.container {
+  display: flex;
+  width: 960px;
+  padding-right: 24px;
+  padding-left: 24px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
   font-size: 18px;
+  color: inherit;
+  text-decoration: none;
 }
 
-.item {
+.item-menu {
   list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
 }
 
 .item:not(:first-child) {
   margin-left: 12px;
 }
 
-.item-menu {
-  display: flex;
-  justify-content: flex-end;
+.item-link {
+  font-family: inherit;
+  color: inherit;
+  display: block;
+  /* border: 1px solid black; */
+  padding: 12px 20px;
+  text-decoration: none;
 }
 
-.item-menu a {
-  padding: 12px 20px;
+.header a:hover,
+.header a:focus {
+  color: #2196f3;
 }
