--- a/css/task6-2.css
+++ b/css/task6-2.css
@@ -4,10 +4,12 @@
   padding: 15px;
   text-transform: uppercase;
   font-size: 18px;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
 }
 
 .button:hover,
 .button:focus {
   background-color: #115293;
-  transition-duration: 250ms;
 }
