--- a/css/task6-3.css
+++ b/css/task6-3.css
@@ -1,7 +1,25 @@
 .card {
   position: relative;
+  width: 320px;
+  overflow: hidden;
 }
 
 .overlay {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(24, 23, 23, 0.5);
+  color: #ffffff;
+  padding-left: 5px;
+  padding-right: 5px;
+  transform: translateY(100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+}
+
+.card:hover .overlay {
+  transform: translateY(0);
 }
