--- a/css/task7-3.css
+++ b/css/task7-3.css
@@ -1,26 +1,43 @@
+.red,
+.green {
+  height: 100px;
+}
+
+.red {
+  background-color: red;
+  margin-bottom: 5px;
+}
+
+.green {
+  background-color: green;
+}
+
+.blue {
+  height: 70px;
+  background-color: blue;
+}
+
 @media screen and (max-width: 767px) {
-  .red,
   .green {
-    height: 100px;
     margin-bottom: 5px;
-  }
-
-  .red {
-    background-color: red;
-  }
-
-  .green {
-    background-color: green;
-  }
-
-  .blue {
-    height: 70px;
-    background-color: blue;
   }
 }
 
 @media screen and (min-width: 768px) {
   .wrapper {
-    /* display: flex; */
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .green {
+    flex-basis: calc(30% - 5px);
+    margin-right: 5px;
+    height: 200px;
+  }
+
+  .blue {
+    flex-basis: 70%;
+    height: 100px;
+    height: 200px;
   }
 }
